# opti-break

./: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
.claude/: git-workflow.md
.github/: release.yml
.github/workflows/: release.yml
docs/: INSTALL.md  LOCAL_DEV_SETUP.md  SPEC.md
plans/: plan.md
scripts/: gen-tray-icons.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json  warning.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  idle.rs  lib.rs  main.rs  schedule.rs  settings.rs  shortcuts.rs  sounds.rs  spaces.rs  state.rs  timer.rs  tray.rs  windows.rs
src/features/debug/: DebugPanel.tsx
src/features/onboarding/: Onboarding.tsx
src/features/overlay/: BreakOverlay.tsx
src/features/preferences/: PreferencesPage.tsx
src/features/preferences/sections/: Break.tsx  General.tsx  Reminders.tsx  Schedule.tsx  Timer.tsx  shared.tsx
src/features/stats/: StatsPage.tsx  streak.ts
src/features/warning/: WarningToast.tsx
src/lib/: settings-client.ts  sounds-client.ts  stats-client.ts  timer-client.ts
src/shared/: settings.ts
