[package]
name = "opti-break"
version = "0.1.0"
description = "20-20-20 eye care desktop app"
authors = ["rafiaman"]
edition = "2021"

[lib]
name = "opti_break_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
user-idle = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
